feat: Implemented dependencies.